--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
 
     defaultConfig {
         applicationId "com.gk.emon.allhealthappssummary"
-        minSdk 21
+        minSdk 23
         targetSdk 33
         versionCode 1
         versionName "1.0"
@@ -58,6 +58,7 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     implementation 'com.google.android.gms:play-services-fitness:21.1.0'
     implementation 'com.google.android.gms:play-services-auth:20.2.0'
+    implementation 'com.google.android.gms:play-services-wearable:17.1.0'
 
     // Dagger
     kapt "com.google.dagger:hilt-compiler:2.42"
@@ -85,6 +86,7 @@ dependencies {
     implementation 'androidx.activity:activity-compose:1.5.1'
     implementation "com.google.accompanist:accompanist-appcompat-theme:$accompanistVersion"
     implementation "com.google.accompanist:accompanist-swiperefresh:$accompanistVersion"
+
 
 
 }
