feat: handle bluetooth permission feat: add bluetooth turn on

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -87,6 +87,8 @@ dependencies {
     implementation "com.google.accompanist:accompanist-swiperefresh:$accompanistVersion"
     implementation 'androidx.activity:activity-ktx:1.5.1'
 
+    implementation 'com.google.accompanist:accompanist-permissions:0.24.13-rc'
+
 
 
 
