--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AllHealthAppsSummary"
         tools:targetApi="31">
+        <meta-data
+            android:name="com.huawei.hms.client.appid"
+            android:value="*****"/>
         <activity
             android:name=".presentation.home.MainActivity"
             android:exported="true"
