--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ plugins {
 
 android {
 
+    /*TODO: Uncomment it when get huawei api approval
     signingConfigs {
         debug {
             storeFile file('../jks/keystore')
@@ -14,7 +15,7 @@ android {
             keyAlias '121212'
             keyPassword '121212'
         }
-    }
+    }*/
     compileSdk 33
 
     defaultConfig {
@@ -99,7 +100,6 @@ dependencies {
 
     implementation 'com.google.accompanist:accompanist-permissions:0.24.13-rc'
     implementation 'com.huawei.hms:health:6.6.0.300'
-
 
 
 }
